# ram-consumption-of-collections

./: Cargo.toml  log.ndjson  outcome.txt  readme.md  this.md
jupyter/: plots.ipynb
src/: main.rs
