[package]
name = "ram-consumption-of-collections"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jemallocator = "0.5.0"
serde = { version = "1.0.147", features = [ "derive" ]}
serde_json = "1.0.87"
